unix/lang/tests/error/import_error_line_number.yab
#expect#---Error in library1e.yab, line 4: syntax error
#expect#   This cannot be parsed :-/
#expect#        ^~~~~~
#expect#---Error: Program not executed

# Error in library with correct line number
import library1e


